--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
 fastapi==0.109.0
 uvicorn==0.27.0
 apify-client==1.6.3
+python-dotenv==1.0.0
+langchain-community
+langchain-google-genai
+langchain-core
+langchain-text-splitters
+supabase
